<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reg"
        android:textColor="@color/textback"
        android:textSize="30sp" />

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:layout_centerInParent="true"
        android:background="@color/textback">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="100dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txt1"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="150dp"
            android:autofillHints="name"
            android:background="@color/white"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="210dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/pas"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txt2"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="260dp"
            android:autofillHints="name"
            android:background="@color/white"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/reg"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="45sp"
            android:layout_marginVertical="350sp"
            android:backgroundTint="@color/turquoise"
            android:text="@string/zareg"
            android:textColor="@color/neebu"
            android:textSize="13sp" />

        <Button
            android:id="@+id/zad"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="90sp"
            android:layout_marginVertical="410sp"
            android:backgroundTint="@color/turquoise"
            android:text="@string/zad"
            android:textColor="@color/neebu"
            android:textSize="13sp" />


    </FrameLayout>

</RelativeLayout>